fix: add word-break on tags (#424)

--- a/resources/assets/css/_buttons.css
+++ b/resources/assets/css/_buttons.css
@@ -11,9 +11,8 @@
 }
 
 .button-tag {
-    @apply button-secondary;
-    @apply py-0.5 px-3 !important;
-    @apply text-left !important;
+    @apply button-secondary break-all;
+    @apply py-0.5 px-3 text-left !important;
 }
 
 .button-outline {
